[package]
name = "eve_market_analysis"
version = "0.1.0"
authors = ["sradley <stephen.t.radley@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.98"
serde_derive = "1.0.98"

[dependencies.chttp]
version = "0.5.3"
features = ["json"]

[profile.release]
debug-assertions = false
