[package]
name = "eve_market_websocket"
version = "0.1.0"
authors = ["sradley <stephen.t.radley@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.98"
serde_derive = "1.0.98"
serde_json = "1.0.40"
ws = "0.9.0"
log = "0.4.8"
chrono = "0.4.7"

[dependencies.chttp]
version = "0.5.3"
features = ["json"]
